erste komplette Ausarbeitung

--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -12,7 +12,7 @@ Die vorliegende Studie ist Teil eines größeren Forschungsprojektes, das weiter
 
 Vorraussetzung für die Teilhabe an der Umfrage waren ein internetfähiges Endgerät, die Erreichte Volljährigkeit und eine ausreichende Beherrschung der deutschen Sprache. 
 
-Für die Datengeneration wurde ein Onlinefragbogen (siehe Anhang~\ref{Fragebogen}) erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Auf diese weise konnnten der Interview- und der Versuchsleitereffekt vermieden werden. Der Zugangslink wurde primär über die sozialen Netzwerke der Projektleiterinnen verschickt der sich nach dem Primzip des Schneeballeffekts verbreitete. Es handelt sich dabei um ein randomisiertes teilexperimentelles Verfahren mit einer anfallenden Stichprobe. Das Verfahren ist teilexperimentel, da die Variablen in den Fallvignetten manipuliert wurden, die Variablen der standatisierten Fragebögen jedoch nicht.
+Für die Datengeneration wurde ein Onlinefragbogen (siehe \hyperref[Fragebogen]{Anhang E}) erstellt, da dadurch eine weitreichendere und ökonomischere Erhebung gewährleistet werden konnte. Auf diese weise konnnten der Interview- und der Versuchsleitereffekt vermieden werden. Der Zugangslink wurde primär über die sozialen Netzwerke der Projektleiterinnen verschickt der sich nach dem Primzip des Schneeballeffekts verbreitete. Es handelt sich dabei um ein randomisiertes teilexperimentelles Verfahren mit einer anfallenden Stichprobe. Das Verfahren ist teilexperimentel, da die Variablen in den Fallvignetten manipuliert wurden, die Variablen der standatisierten Fragebögen jedoch nicht.
 
 Bezüglich der Erhebungsmethode und -Design handelt es sich bei dieser Arbeit um eine quantitative Querschnittstudie, auf der Basis eines einzigen Messzeitpunktes.
 
