--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -28,8 +28,8 @@ Die Hypothese 1 geht von einer Korrelation des Aggressionsscores mit Victim Blam
 Das in Tabelle~\ref{H1_Spearman} ersichtliche Ergebnis der Spearman$-$Rang$-$Korrelation fiel nicht signifikant aus ($p$~=~n.s.). Mit dem sehr kleinen Effekt \parencite{Cohen_1992} von $r_{s}$~=~.18, korreliert die Aggression nur sehr gering mit der Verantwortungszuschreibung auf das Opfer.
 
 \subsection{Hypothese 2}    \label{subsec_4.2.2}
-Die Voraussetzung einer Pearson$-$Produkt$-$Moment$-$Korrelation wurden in ~\ref{sec_3.5} bereits aufgeführt. In diesem Falle sind auch alle Voraussetzungen gegeben: Aggression und die Akzeptanz von Gewaltmythen sind metrisch, die vorhandenen Ausreißer sind im akzeptablen Bereich (siehe Anhang~\ref{Boxplot_AggroFB} und Anhang~\ref{Boxplot_DVMAS}), 
-es liegt ein linearer Zusamenhang zwischen den Variablen vor (siehe Anhang~\ref{Linearitat_AggroFB_DVMAS}) und eine bivariate Normalverteilung ist auch gegeben, da der Bootstrap$-$Konfidenzintervall (.308 $-$ .442) die Null nicht einbezieht.
+Die Voraussetzung einer Pearson$-$Produkt$-$Moment$-$Korrelation wurden in ~\ref{sec_3.5} bereits aufgeführt. In diesem Falle sind auch alle Voraussetzungen gegeben: Aggression und die Akzeptanz von Gewaltmythen sind metrisch, die vorhandenen Ausreißer sind im akzeptablen Bereich (siehe \hyperref[Boxplot_AggroFB]{Anhang A} und \hyperref[Boxplot_DVMAS]{Anhang B}), 
+es liegt ein linearer Zusamenhang zwischen den Variablen vor (siehe \hyperref[Linearitat_AggroFB_DVMAS]{Anhang C}) und eine bivariate Normalverteilung ist auch gegeben, da der Bootstrap$-$Konfidenzintervall (.308 $-$ .442) die Null nicht einbezieht.
 
 Die in Tabelle~\ref{H2_Pearson} ersichtliche Pearson$-$Produkt$-$Moment$-$Korrelation zeigte einen Zusammenhang von $r$~=~.38. Nach \textcite{Cohen_1992} entspricht dies einer mittelgroßen Korrelation, die bei einseitiger Testung statistisch signifikant ausfiel ($p<$ .001).
 \input{4 Ergebnisse/Tabelle H2 Pearson.tex}
@@ -78,14 +78,21 @@ Zusätzlich zu den untersuchten Hypothesen wurden noch weitere explorative Unter
 %Des Weiteren wurde Aggression mit dem kultuerllen Hintergrund der Probanden (vgl. Kapitel~\ref{subsec_4.4.2}) korreliert. Der Deutsche Aggressionsfragebogen unterlief zwei Unterschiedtestungen. In Kapitel~\ref{subsec_4.4.3} wurde exploriert, ob sich die Aggressionsausprägung zwischen den kulturellen Hintergründen unterscheidet und in Kapitel~\ref{subsec_4.4.4} mit den biologischen Geschlechtern der Probanden.
 
 
-\subsection{Korrelation Aggresion-Subskalen mit DVMAS}  \label{subsec_4.4.1}
+\subsection{Korrelation Aggresion-Subskalen mit DVMAS und Victim Blaming}  \label{subsec_4.4.1}
+Für die Korrelation zwischen den vier Aggression-Subskalen physische und verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen, wie der Verantwortungszuschreibung auf das Opfer wurde eine Spearman$-$Rang$-$Korrelation berechnet. Trotz der metrischen Skaleniveaus aller Variablen und die Erfüllung weiterer Voraussetzungen für eine Pearson$-$Produkt$-$Moment$-$Korrelation, musste aufgrund der Ausreißer der Subskala physische Aggression (siehe \hyperref[Boxplot_phAggro]{Anhang D}), die Spearman$-$Korrelation herangezogen werden.
+
+An den mit zwei Sternchen vermerkten $r-$Werten, in Tabelle~\ref{lala}, ist erkennbar, dass alle Subskalen unter sich signifikant sind und, dass sie jeweils mit dem DVMAS positiv korrelieren. Bei der Verantwortungszuschreibung auf das Opfer war ausschließlich die Korrelation mit physischer Aggression signifikatn.
 \input{4 Ergebnisse/Tabelle Explorativ AggroSub.tex}
-Für die Korrelation zwischen den drei Aggressions-Subskalen verbale Aggression, Ärger und Misstrauen und der Akzeptanz von Gewaltmythen wurde eine Pearson$-$Produkt$-$Moment$-$Korrelation berechnet, denn alle Variablen sind metrisch skaliert. Des Weiteren ist die Linearität zwischen den Variablen gegeben. Da die Variable der physischen Aggression zu große Ausreißer aufwies, wurde sie aus der Korrelationsrechnung ausgeschlossen. Auch eine bivariate Normalverteilung ist bei den verbliebenen Korrelation vorhanden und lauten wie folgt: verbale Aggression$-$Ärger CI [0.39, 0.51], verbale Aggression$-$Misstrauen CI [0.23, 0.36], verbale Aggression$-$DVMAS CI [0.20, 0.34], Ärger$-$DVMAS CI [0.18, 0.31], Misstrauen$-$DVMAS CI [0.18, 0.29], Misstrauen$-$Ärger CI [0.41, 0.53]. An den kursiv gesetzten $r-$Werte, in Tabelle~\ref{lala}, ist erkennbar, dass alle Subskalen unter sich signifikant sind und, dass sie jeweils mit dem DVMAS positiv korrelieren. 
 
-Die verbale Aggression korrelierte mittelgradig mit Ärger ($r$~=~.45, $p<$~.001) und Misstrauen ($r$~=~.30, $p<$~.001).
-Die Subskala Ärger wies eine mittelgradig Korrelation mit Misstrauen ($r$~=~.48, $p<$~.001) auf.
+Die physische Aggression korreliert mittelgradig mit den weiteren Subskalen verbaler Aggression ($r$~=~.36, $p<$~.001), Ärger ($r$~=~.46, $p<$~.001) und Misstrauen ($r$~=~.31, $p<$~.001).
+Die verbale Aggression korrelierte mittelgradig mit Ärger ($r$~=~.39, $p<$~.001) und Misstrauen ($r$~=~.27, $p<$~.001).
+Die Subskala Ärger wies eine mittelgradig Korrelation mit Misstrauen ($r$~=~.45, $p<$~.001) auf.
 
-Der DVMAS wies bei den drei Subskalen verbale Aggression ($r$~=~.27, $p<$~.001), Ärger ($r$~=~.25, $p<$~.001) und Misstrauen ($r$~=~.24, $p<$~.001) jeweils eine schwache Korrelation auf.
+Der DVMAS wies bei den vier Subskalen physische Aggression ($r$~=~.28, $p<$~.001) verbale Aggression ($r$~=~.25, $p<$~.001), Ärger ($r$~=~.19, $p<$~.001) und Misstrauen ($r$~=~.24, $p<$~.001) jeweils eine schwache Korrelation auf.
+
+Die Korrelationen zwischen Victim Blaming und den vier Subskalen waren alles schwach: physische Aggression ($r$~=~.07, $p$~=~.03), verbale Aggression ($r$~=~.02, $p$~=~n.s), Ärger ($r$~=~.04, $p$~=~n.s) und Misstrauen ($r$~=~.02, $p$~=~n.s).
+
+% denn alle Variablen sind metrisch skaliert. Des Weiteren ist die Linearität zwischen den Variablen gegeben. Da die Variable der physischen Aggression zu große Ausreißer aufwies, wurde sie aus der Korrelationsrechnung ausgeschlossen. Auch eine bivariate Normalverteilung ist bei den verbliebenen Korrelation vorhanden und lauten wie folgt: verbale Aggression$-$Ärger CI [0.39, 0.51], verbale Aggression$-$Misstrauen CI [0.23, 0.36], verbale Aggression$-$DVMAS CI [0.20, 0.34], Ärger$-$DVMAS CI [0.18, 0.31], Misstrauen$-$DVMAS CI [0.18, 0.29], Misstrauen$-$Ärger CI [0.41, 0.53]. 
 
 %\subsection{Korrelation Aggresion-Subskalen mit Geschlecht der Probanden}   \label{subsec_4.4.2}
 %Für die Korrelation zwischen Aggression und dem biologischen Geschlecht der Probanden wurde eine Spearman$-$Rang$-$Korrelation berechnet, da beide Variablen metrisch skaliert sind. An den, in %Tabelle~\ref{}, kursiv gesetzten $r-$Werte ist erkennbar, dass Aggression und der kulturelle Hintergrund negativ korrelieren. Mit $r$~=~$-$.26 bildet diese mittelgradige negative Korrelation zwischen den beiden Variablen ein signifikantes Ergebnis ($p<$~.001).   
