--- a/4 Ergebnisse/Tabelle Explorativ AggroSub.tex
+++ b/4 Ergebnisse/Tabelle Explorativ AggroSub.tex
@@ -1,22 +1,24 @@
 \begin{table}[htb]
-    \caption[Mittelwerte, Standardabweichung und Korrelation der Aggression$-$Subskalen und des DVMAS]{\textit {Mittelwerte, Standardabweichung und Korrelation der Aggression$-$Subskalen und des DVMAS}} 
+    \caption[Mittelwerte, Standardabweichung und Korrelation der Aggression$-$Subskalen, DVMAS und Victim Blaming]{\textit {Mittelwerte, Standardabweichung und Korrelation der Aggression$-$Subskalen, DVMAS und Victim Blaming}} 
     \label{lala}
     \centering
-    \begin{adjustbox}{width=11cm} %{width=\textwidth}
+    \begin{adjustbox}{width=14cm} %{width=\textwidth}
     \small
-    \begin{tabular}{lrrrrrr}
+    \begin{tabular}{lrrrrrrrr}
       \hline
-        Variablen & $M$ & $SD$ & 1 & 2 & 3 & 4 \\
+        Variablen             & $M$  & $SD$   & 1     & 2     & 3     & 4    & 5 & 6\\
        \hline
-       1 verbale Aggression & 2.22 & 0.53 &      &      &      & \\
-       2 Ärger              & 1.96 & 0.58 & .45* &      &      & \\
-       3 Misstrauen         & 1.93 & 0.60 & .30* & .47* &      & \\
-       4 deutscher DVMAS    & 2,60 & 0.80 & .27* & .25* & .24* & \\
+       1 physische Aggression & 1.60  & 0.55  &       &       &        &      & &\\
+       2 verbale Aggression   & 2.22  & 0.53  & .36** &       &        &      & &\\
+       3 Ärger                & 1.96  & 0.58  & .46** & .39** &        &      & &\\
+       4 Misstrauen           & 1.93  & 0.60  & .31** & .27** & .45**  &      & &\\
+       5 DVMAS                & 2.60  & 0.80  & .28** & .25** & .19**  & .24** & &\\
+       6 Victim Blaming       & 26.58 & 27.99 & .07*  & .02   & .04    & .02   & & \\
     \end{tabular}
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; deutscher DVMAS = Akzeptanz der Gewaltmythen; Aggression-Subskalen von 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); deutscher DVMAS von 1 (\textit{Verantwortungszuschreibung gegenüber des Täters}) bis 101 (\textit{Verantwortungszuschreibung gegenüber des Opfers}); Pearson$-$Produkt$-$Moment$-$Korrelation. *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Aggression-Subskalen von 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu});  DVMAS von 1 (\textit{stimme überhaupt nicht zu}) bis 7 (\textit{stimme völlig zu}); Victim Blaming von 1 (\textit{Verantwortungszuschreibung auf den Täter}) bis 101 (\textit{Verantwortungszuschreibung auf das Opfer}); Spearman$-$Rang$-$Korrelation. *$p<$~.05, **$p<$~.001
       \end{tablenotes}
     \end{table}
 
