--- a/4 Ergebnisse/Tabelle H1 Spearman.tex
+++ b/4 Ergebnisse/Tabelle H1 Spearman.tex
@@ -15,7 +15,8 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Spearman$-$Rang$-$Korrelation.
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Victim Blaming 1 (\textit{Verantwortungszuschreibung auf den Täter}) bis 101 (\textit{Verantwortungszuschreibung auf das
+        Opfer}); Spearman$-$Rang$-$Korrelation.
       \end{tablenotes}
     \end{table}
 
