--- a/4 Ergebnisse/Tabelle H2 Pearson.tex
+++ b/4 Ergebnisse/Tabelle H2 Pearson.tex
@@ -15,7 +15,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}) Variable DVMAS 1 (stimme überhaupt nich zu) bis 7 (stimme völlig zu); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; DVMAS = Akzeptanz der Gewaltmythen; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); Variable DVMAS 1 (stimme überhaupt nich zu) bis 7 (stimme völlig zu); Pearson$-$Produkt$-$Moment$-$Korrelation. \\ *$p<$~.001
       \end{tablenotes}
     \end{table}
 
