--- a/4 Ergebnisse/Tabelle Haupteffekte.tex
+++ b/4 Ergebnisse/Tabelle Haupteffekte.tex
@@ -15,7 +15,7 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864%; *$p<$~.001
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864; Wertebereich der Variable Aggression 1 (\textit{trifft nicht zu}) bis 4 (\textit{trifft voll zu}); biologisches Geschlecht 1 (\textit{männlich}) bis 2 (\textit{weiblich}).
       \end{tablenotes}
     \end{table}
 
