--- a/4 Ergebnisse/Tabelle KT kult.tex
+++ b/4 Ergebnisse/Tabelle KT kult.tex
@@ -17,6 +17,6 @@
     \end{adjustbox}
     
     \begin{tablenotes}
-        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. Prüffrage: Hatten die Personen deutsche Namen?
+        \item \textit{Anmerkungen.} \( N_{neu} \)~=~864. Prüffrage: \enquote{Hatten die Personen deutsche Namen?}.
       \end{tablenotes}
     \end{table}
