--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -38,9 +38,10 @@ Das signifikante Ergebnis der H2 bedeutet, dass Aggression positiv mit der Akzep
 
 
 % H3:
-Die Moderationsanalyse der H3 zeigt eine nicht signifikante Interaktion des biologischen Geschlechts mit der Aggression und der Akzeptanz der Mythen häuslicher Gewalt. In Kapitel~\ref{subsec_2.2.3} wurde von Geschlechterunterschieden bezüglich der Aggressivität wie auch der Akzeptanz von Gewaltmythen berichtet \parencite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020}. Obwohl diese Studien darlegen, dass das Geschlecht sowohl auf die Aggression, wie auch auf die Akzeptanz von Mythen Auswirkungen hat, konnte diese Moderationsanalyse keinen Beleg darbieten, dass der Zusammenhang von Aggression und Akzeptanz von Gewaltmythen durch das Geschlecht beeinflusst wird. Bei der Prüfung der Voraussetzungen einer Homoskedastizität fiel der Whit-Test signifikan aus, das für eine Heteroskedastizität spricht. Der dadurch entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}. 
+Die Moderationsanalyse der H3 zeigt eine nicht signifikante Interaktion des biologischen Geschlechts mit der Aggression und der Akzeptanz der Mythen häuslicher Gewalt. In Kapitel~\ref{subsec_2.2.3} wurde von Geschlechterunterschieden bezüglich der Aggressivität wie auch der Akzeptanz von Gewaltmythen berichtet \parencite{H2_u_3_Bhogal_2016, H3_MFUnterschied, H3_2020}. Obwohl diese Studien darlegen, dass das Geschlecht sowohl auf die Aggression, wie auch auf die Akzeptanz von Mythen Auswirkungen hat, konnte diese Moderationsanalyse keinen Beleg dafür darlegen. Der Einfluss von Aggression auf die Akzeptanz von Gewaltmythen ist Geschlechterunabhängig. Bei der Prüfung der Voraussetzungen einer Homoskedastizität fiel der Whit-Test signifikan aus, das für eine Heteroskedastizität spricht. Diese kann zu einem möglicherweise nicht signifikanten Ergebnis führen, obwohl beide Prädiktoren hoch signifikatne Haupteffekte aufweisen.
+Der durch die Heteroskedastizität entstandene Bias des Standardfehlers kann zu fehlerhaften Interpretationen und Schlussfolgerungen des $p-$Wertes der Moderation führen \parencite{Voraussetzung_Moderation}. 
+
 Aufgrund des dennoch nicht signifikanten Moderationseffekt, wurde eine Analyse der Haupteffekte durchgeführt. Sie zeigt einen Effekt des Geschlechts auf die Akzeptanz, wie einen Effekt der Aggression auf die Akzeptanz. Dies bedeutet, dass unabhängig voneinander das Geschlecht und die Aggression Einfluss auf die Akzeptanz von Mythen häuslicher Gewalt nehmen. Der Einfluss des Geschlechts stimmen mit den Ergebnissen von \textcite{H3_2020} überein.
-% warum net signifikant wenn haupteffekte?
 
 
 %Explo
@@ -64,9 +65,27 @@ Durch das Onlinemedium konnte kein Einfluss auf Störvariablen erfolgen. Es war 
 Zusammenfassend kann man die Ergebung der Daten durch die standardisierten Fragebögen und durch die Manipulationschecks als valide einstufen. Dennoch sollte bei einer erneuten Untersuchung auf eine verbesserte Randomisierung der Variablen, innerhalb der Fallvignetten, wie auch der Fragebögen geachtet werde. 
 
 
-\section{Ausblick}
-Theoretische und/ oder praktische Implikationen     \label{sec_5.4}
-Fragebogen validieren
-viel mehr infos und weiterbildung muss sein
-Alt mit Jung vergleichen, weil hauptsächlich Jung kann auch verzerren
-komplette randomisierung: Variablen Vignetten und FB Reiehendolge
+\section{Ausblick}    \label{sec_5.4}
+In diesem abschließenden Kapitel werden die Konsequenzen und Folgen der gewonnenen Erkenntnisse genannt. Des Weiteren wird auf einen weiteren Forschungsbedarf hingewiesen.
+
+Die zu Beginn aufgeworfene Frage, eines möglichen Zusammenfassungs zwischen der Aggression der Probanden und ihrer Akzeptanz von Mythen häuslicher Gewalt, sowie ihrer Tendenz zum Victim Blaming, kann abschließend teilwese zugestimmt werden. Das Ausmaß an Aggression hängt mit der Akzeptanz von Mythen häuslicher Gewalt zusammen. Weiter zeigt eine explorative Post$-$hoc Analyse, dass die vier Subskalen der Aggression ebenfalls mit dem DVMAS zusammenhängen. Jedoch korreliert, im Rahmen einer weiteren Post$-$hoc Analyse, nur eine Subskala der Aggression, die physische Aggression, mit der Verantwortungszuschreibung auf das Opfer. Auch der vermutete Interaktionseffekt des Geschlechts zwischen Aggression und Gewaltmythenakzeptanz ist nicht gegeben. 
+
+%Fragebogen validieren
+Der im Rahmen des Projektes verwendete Fragebogen zur Erhebung der Akzeptanz von Mythen häuslicher Gewalt ist zu dem Zeitpunkt dieser Verschriftlichung bislang noch nicht validiert worde. Da es sich lediglich um eine sinngemäße Übersetzung des Originals von \textcite{Peters2003} handelt, kann davon ausgegangen werden, dass sich die Validität, Reliabilität und Objektivität nicht ausschlaggebend davon unterscheiden. Aus diesem Grund wird die Validität dieser Arbeit in Bezug auf den DVMAS als gut geschätzt. Dennoch sollte eine Validierung der deutschen Übersetzung erfolgen und anschließend gegebenenfalls eine erneute Untersuchung der, im Rahmen dieser Bachelorthesis, aufgestellten Hypothesen bezüglich des DVMAS durchgeführt werden. 
+
+%viel mehr infos und weiterbildung muss sein (Mythen)
+Die Ergebnisse zeigen, dass in Bezug auf die Gewaltmythen die Gesellschaft noch weiter aufgeklärt werden muss. Der Originalfragebogen stammt aus dem Jahr 2003 und ist somit an die 20 Jahre als. Dennoch sind sie noch weit stark verbreitet, was durch unsere Stichprobe ersichtlich ist. Im Rahmen der Aufklärung sollte ein Fokus auf die männliche Bevölkerung gesetzs werden, das sie diese Mythen vermehrt akzeptieren. Zudem sollten auch verhaltensauffällige Kinder und Jugendliche über dieses Thema aufgeklärt werden, da vor allem in den Jugendjahren sich große Teile des Selbst entwickeln \parencite{H1_Entwicklung}.
+
+%Alt mit Jung vergleichen, weil hauptsächlich Jung kann auch verzerren
+% vielleicht auch mit kindern, um altersunterschied zu erforschen was aggro, aber auch dvmas angeht und ggf. vic blame
+Daran anschließend sollten die Themen dieser Arbeit in einer repräsentativen Studie wiederholt werden. Durch die von der Volljährigkeit nicht weit entfernet Stichprobe, kann nicht auf ältere Generationen geschlossen werden. Zusätzlich währe eine Untersuchung der Aggressivität, der Gewaltmythenakzeptanz und des Victim Blamings bei Kindern, Jugendlichen und älteren Altersgruppen interessant, um auch Generationsunterschiede zu erforschen. In Kapitel~\ref{sec_5.2} wurde bereits vermutet, dass das Alter eventuell eine Auswirkung auf die Aggressionsausprägung hat. Durch eine altersunterscheidende Untersuchung könnte dies weiter erforscht werden. 
+
+%komplette randomisierung: Variablen Vignetten und FB Reiehendolge
+% meine explos können falsch positiv sein, deshalb nochmal prüfen
+% h3 wegen hetero kein valides Ergebnis, deshalb nochmal prüfen, weil beide prädiktoren haben hoch signifikatne haupteffekte und wegen hetero vielleicht fälschlicherweise nicht sig
+% themen von h1 nochmal prüfen, weil VicBlame net normalverteilt und dadurch vielleicht falsche schlüsse
+Die im Rahmen dieser Bachelorthesis durchgeführten Analysen sollten zur Validierung erneut und gegebenenfalls mit einer größeren Stichprobe nochmals erhoben werden. Zum Einen dient dies der Überprüfung der möglicherweise falsch positiven Post$-$hoc Analysen, weiter einer potentiellen Verifikation der Hypothesenbefunde. Zum Anderen kann somit eine vollständige Randomisierung aller Variablen ermöglicht werden. Somit würden die Variablen innerhalb der Fallvignetten randomisiert werden. Zusätzlich kann somit die Reihenfolge der im Fragebogen enthaltenden vier Bausteine, Fallvignetten, DVMAS, Deutscher Aggressionsfragebogen und sozidemographische Daten, zufällig festgelegt werden. 
+
+
+% abschließendes Fazit (i guess)
+Abschließend kann festgehalten werden, dass eine erneute Durchführung, der hier untersuchten Konstrukte, ein Gewinn für die zukünftige Forschung darstellt. Nichts desto trotz sollte bereits jetzt mehr Aufklärung über häusliche Gewalt gewährleistet werden.
