--- a/Anhang.tex
+++ b/Anhang.tex
@@ -1,7 +1,8 @@
 %%%%%%%%% wenn mehrere Anhänge vorhanden %%%%%%%%%
 \begin{appendices}
-    \chapter{Boxplot Deutscher Aggressionsfragebogen}            \label{Boxplot_AggroFB}
-    %\addcontentsline{toc}{chapter}{A}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \chapter*{Anhang A}     \label{Boxplot_AggroFB}
+    \addcontentsline{toc}{chapter}{A}
     \noindent \textit{Boxplot zur Erfassung der Ausreißer des Deutschen Aggressionsfragebogens}
 
     \begin{figure}[htb!]
@@ -10,13 +11,15 @@
             %\caption[Linearer Zusammenhang des Deutschen Aggressionsfragebogens und des DVMAS]{Linearer Zusammenhang des Deutschen Aggressionsfragebogens und des DVMAS}
 
     \end{figure}
+
     
     
+    % Boxplot Deutscher Aggressionsfragebogen
 
     %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \chapter{Boxplot DVMAS}            \label{Boxplot_DVMAS}
-    %\addcontentsline{toc}{chapter}{B}
+    \chapter*{Anhang B}            \label{Boxplot_DVMAS}
+    \addcontentsline{toc}{chapter}{B}
     \noindent \textit{Boxplot zur Erfassung der Ausreißer des DVMAS}
 
     \begin{figure}[htb!]
@@ -27,11 +30,12 @@
     \end{figure}
     
     
+    % Boxplot DVMAS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\chapter{Linearität Deutscher Aggressionsfragebogen und DVMAS} \label{Linearitat_AggroFB_DVMAS}
-%\addcontentsline{toc}{chapter}{C}
+\chapter*{Anhang C} \label{Linearitat_AggroFB_DVMAS}
+\addcontentsline{toc}{chapter}{C}
 \noindent \textit{Linearer Zusammenhang des Deutschen Aggressionsfragebogens und des DVMAS}
 
 \begin{figure}[htb!]
@@ -42,11 +46,12 @@
 \end{figure}
     
     
+% Linearität Deutscher Aggressionsfragebogen und DVMAS
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \chapter{Boxplot Aggression$-$Subskala physische Aggression}            \label{Boxplot_phAggro}
-    %\addcontentsline{toc}{chapter}{D}
+    \chapter*{Anhang D}            \label{Boxplot_phAggro}
+    \addcontentsline{toc}{chapter}{D}
     \noindent \textit{Boxplot zur Erfassung der Ausreißer der Aggression$-$Subskala physische Aggression}
 
     \begin{figure}[htb!]
@@ -57,11 +62,13 @@
     \end{figure}
     
     
+    %Boxplot Aggression$-$Subskala physische Aggression
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-    \chapter{Online$-$Fragebogen}  \label{Fragebogen}
-    %\addcontentsline{toc}{chapter}{E}
+    % Online$-$Fragebogen
+    \chapter*{Anhang E}  \label{Fragebogen}
+    \addcontentsline{toc}{chapter}{E}
     \noindent \textit{Bildaufnahmen des Online$-$Fragbogens}
 
     \begin{figure}[htb!]
